Added "Add location" button to action bar. Deleted "Add" button from fragment screen

--- a/app/src/main/res/layout/location_list_fragment.xml
+++ b/app/src/main/res/layout/location_list_fragment.xml
@@ -13,30 +13,20 @@
             android:layout_height="0dp"
             tools:listitem="@layout/location_list_item"
             android:padding="@dimen/big_padding"
-            app:layout_constraintBottom_toTopOf="@+id/location_add_btn"
+            app:layout_constraintBottom_toTopOf="@+id/location_delete_btn"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/location_add_btn"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Add"
-            app:layout_constraintBottom_toTopOf="@id/location_delete_btn"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/location_recyclerview"/>
-
-        <Button
             android:id="@+id/location_delete_btn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Delete all"
+            android:text="Delete all (temp)"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/location_add_btn"/>
+            app:layout_constraintTop_toBottomOf="@id/location_recyclerview"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
