Изменил дизайн элемента списка помещений

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="big_padding">16dp</dimen>
+    <dimen name="medium_padding">8dp</dimen>
+    <dimen name="main_font_size">24sp</dimen>
+    <dimen name="description_font_size">16sp</dimen>
 </resources>
