--- a/app/src/main/res/layout/location_list_item.xml
+++ b/app/src/main/res/layout/location_list_item.xml
@@ -1,21 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".fragment.LocationListFragment">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@color/black">
+        android:background="@color/white">
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/location_name"
-            style="@style/location_item"
-            android:background="@android:color/holo_orange_light"/>
-        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/bg_white"
+            android:textSize="@dimen/main_font_size"
+            android:textColor="@color/main_text"
+            android:paddingHorizontal="@dimen/medium_padding"
+            android:paddingTop="@dimen/big_padding"
+            tools:text="Location"/>
+        <TextView
             android:id="@+id/location_description"
-            style="@style/location_item"
-            android:background="@android:color/holo_orange_light"/>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/bg_white"
+            android:textSize="@dimen/description_font_size"
+            android:textColor="@color/main_text"
+            tools:text="Location description"
+            android:paddingHorizontal="@dimen/medium_padding"
+            android:paddingBottom="@dimen/medium_padding"/>
     </LinearLayout>
 </layout>
