--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -25,6 +25,9 @@
             app:destination="@id/locationListFragment"
             app:popUpTo="@id/locationListFragment"
             app:popUpToInclusive="true"/>
+        <argument
+            android:name="locationId"
+            app:argType="integer" />
     </fragment>
     <fragment
         android:id="@+id/meterListFragment"
