--- a/app/src/main/res/layout/meter_list_fragment.xml
+++ b/app/src/main/res/layout/meter_list_fragment.xml
@@ -3,20 +3,33 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".fragment.MeterListFragment">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/meter_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/big_padding"
+            android:textColor="@color/secondary_text"
+            android:textSize="@dimen/description_font_size"
+            app:layout_constraintBottom_toTopOf="@+id/meter_recyclerview"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/meter_recyclerview"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            tools:listitem="@layout/meter_list_item"
             android:padding="@dimen/big_padding"
             app:layout_constraintBottom_toTopOf="@+id/meter_add_btn"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/meter_description"
+            tools:listitem="@layout/meter_list_item" />
 
         <Button
             android:id="@+id/meter_add_btn"
@@ -24,9 +37,9 @@
             android:layout_height="wrap_content"
             android:text="Add"
             app:layout_constraintBottom_toTopOf="@id/meter_delete_btn"
-            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/meter_recyclerview"/>
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/meter_recyclerview" />
 
         <Button
             android:id="@+id/meter_delete_btn"
@@ -34,9 +47,9 @@
             android:layout_height="wrap_content"
             android:text="Delete all"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/meter_add_btn"/>
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/meter_add_btn" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
