--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
 
     <color name="bg_white">#FFFFFFFF</color>
     <color name="main_text">#FF000000</color>
+    <color name="secondary_text">#FF666666</color>
 </resources>
