Сделал редактирование Помещения, добавил тост Помещение добавлено

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -47,6 +47,9 @@
         <argument
             android:name="locationId"
             app:argType="integer" />
+        <action
+            android:id="@+id/action_meterListFragment_to_locationDetailsFragment"
+            app:destination="@id/locationDetailsFragment" />
     </fragment>
     <fragment
         android:id="@+id/meterDetailsFragment"
