--- a/app/src/main/res/menu/meter_list_menu.xml
+++ b/app/src/main/res/menu/meter_list_menu.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <item
-        android:id="@+id/delete_location"
-        android:icon="@drawable/ic_action_delete"
-        android:title="Delete"
+    <item android:id="@+id/edit_location"
+        android:icon="@drawable/edit_icon"
+        android:title="@string/delete_hint"
         app:showAsAction="always" />
-
+    <item android:id="@+id/delete_location"
+        android:icon="@drawable/ic_action_delete"
+        android:title="@string/edit_hint"
+        app:showAsAction="ifRoom" />
 </menu>
