Добавил экран счетчика и удаление счетчика.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/locationListFragment"
         android:name="com.sosnowskydevelop.metermanager.fragment.LocationListFragment"
-        android:label="LocationListFragment" >
+        android:label="LocationListFragment">
         <action
             android:id="@+id/action_locationListFragment_to_meterListFragment"
             app:destination="@id/meterListFragment" />
@@ -23,12 +23,12 @@
     <fragment
         android:id="@+id/locationDetailsFragment"
         android:name="com.sosnowskydevelop.metermanager.fragment.LocationDetailsFragment"
-        android:label="LocationDetailsDialog" >
+        android:label="LocationDetailsDialog">
         <action
             android:id="@+id/action_locationDetailsFragment_to_locationListFragment"
             app:destination="@id/locationListFragment"
             app:popUpTo="@id/locationListFragment"
-            app:popUpToInclusive="true"/>
+            app:popUpToInclusive="true" />
         <argument
             android:name="locationId"
             app:argType="integer" />
@@ -37,7 +37,7 @@
         android:id="@+id/meterListFragment"
         android:name="com.sosnowskydevelop.metermanager.fragment.MeterListFragment"
         android:label="meter_list_fragment"
-        tools:layout="@layout/meter_list_fragment" >
+        tools:layout="@layout/meter_list_fragment">
         <action
             android:id="@+id/action_meterListFragment_to_meterDetailsFragment"
             app:destination="@id/meterDetailsFragment" />
@@ -50,19 +50,38 @@
         <action
             android:id="@+id/action_meterListFragment_to_locationDetailsFragment"
             app:destination="@id/locationDetailsFragment" />
+        <action
+            android:id="@+id/action_meterListFragment_to_readingListFragment"
+            app:destination="@id/readingListFragment" />
     </fragment>
     <fragment
         android:id="@+id/meterDetailsFragment"
         android:name="com.sosnowskydevelop.metermanager.fragment.MeterDetailsFragment"
-        android:label="MeterDetailsFragment" >
+        android:label="MeterDetailsFragment">
         <action
             android:id="@+id/action_meterDetailsFragment_to_meterListFragment"
             app:destination="@id/meterListFragment"
             app:popUpTo="@id/meterListFragment"
-            app:popUpToInclusive="true"/>
+            app:popUpToInclusive="true" />
         <argument
             android:name="locationId"
             app:argType="integer" />
     </fragment>
-
+    <fragment
+        android:id="@+id/readingListFragment"
+        android:name="com.sosnowskydevelop.metermanager.fragment.ReadingListFragment"
+        android:label="reading_list_fragment"
+        tools:layout="@layout/reading_list_fragment">
+        <action
+            android:id="@+id/action_readingListFragment_to_meterListFragment"
+            app:destination="@id/meterListFragment"
+            app:popUpTo="@id/meterListFragment"
+            app:popUpToInclusive="true" />
+        <argument
+            android:name="locationId"
+            app:argType="integer" />
+        <argument
+            android:name="meterId"
+            app:argType="integer" />
+    </fragment>
 </navigation>
