--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -60,6 +60,9 @@
         <argument
             android:name="locationId"
             app:argType="integer" />
+        <argument
+            android:name="meterId"
+            app:argType="integer" />
     </fragment>
 
 </navigation>
