--- a/app/src/main/res/layout/location_details_fragment.xml
+++ b/app/src/main/res/layout/location_details_fragment.xml
@@ -7,7 +7,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/new_location_name_label"
+            android:text="@string/name_label"
             android:textSize="@dimen/main_font_size"
             android:textColor="@color/main_text"
             android:paddingHorizontal="@dimen/medium_padding"
