--- a/app/src/main/res/layout/meter_list_item.xml
+++ b/app/src/main/res/layout/meter_list_item.xml
@@ -1,14 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@color/black">
+        android:background="@color/white">
         <TextView
+            android:id="@+id/meter_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/meter_name"
-            android:background="@android:color/holo_orange_light"/>
+            android:background="@color/bg_white"
+            android:textSize="@dimen/main_font_size"
+            android:textColor="@color/main_text"
+            android:paddingHorizontal="@dimen/medium_padding"
+            tools:text="Cold water"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginHorizontal="@dimen/medium_padding">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/last_reading" />
+            <TextView
+                android:id="@+id/tv_last_reading_in_meter_item"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/medium_padding"
+                tools:text="01.01.2000"/>
+        </LinearLayout>
     </LinearLayout>
 </layout>
