сделал список показанийб добавление. Не сделал проверку на меньше предыдущего и список кривой

--- a/app/src/main/res/menu/meter_list_menu.xml
+++ b/app/src/main/res/menu/meter_list_menu.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/add_meter"
         android:icon="@drawable/add_icon"
-        android:title="@string/add_hint"
+        android:title="@string/add_meter_hint"
         app:showAsAction="always" />
     <item android:id="@+id/edit_location"
         android:icon="@drawable/edit_icon"
