--- a/app/src/main/res/layout/meter_list_item.xml
+++ b/app/src/main/res/layout/meter_list_item.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-    <LinearLayout
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:background="@color/white">
         <TextView
             android:id="@+id/meter_name"
@@ -14,12 +14,16 @@
             android:textSize="@dimen/main_font_size"
             android:textColor="@color/main_text"
             android:paddingHorizontal="@dimen/medium_padding"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             tools:text="Cold water"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginHorizontal="@dimen/medium_padding">
+            android:layout_marginHorizontal="@dimen/medium_padding"
+            app:layout_constraintTop_toBottomOf="@id/meter_name"
+            app:layout_constraintStart_toStartOf="parent">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -31,5 +35,5 @@
                 android:layout_marginStart="@dimen/medium_padding"
                 tools:text="01.01.2000"/>
         </LinearLayout>
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
