--- a/app/src/main/res/layout/reading_list_fragment.xml
+++ b/app/src/main/res/layout/reading_list_fragment.xml
@@ -34,12 +34,12 @@
             android:id="@+id/rv_reading_list"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            app:layoutManager="LinearLayoutManager"
             app:layout_constraintTop_toBottomOf="@id/ll_reading_list"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/btn_add_new_reading"
-            tools:listitem="@layout/reading_list_item"
-            android:background="@color/main_text" />
+            tools:listitem="@layout/reading_list_item" />
         <Button
             android:id="@+id/btn_add_new_reading"
             android:layout_width="match_parent"
