--- a/app/src/main/res/layout/reading_list_item.xml
+++ b/app/src/main/res/layout/reading_list_item.xml
@@ -5,27 +5,28 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/secondary_text"
         android:padding="@dimen/medium_padding">
         <TextView
             android:id="@+id/reading_item_date"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:textSize="@dimen/main_font_size"
             android:textColor="@color/main_text"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/reading_item_value"
             tools:text="01.01.1900" />
         <TextView
             android:id="@+id/reading_item_value"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:textSize="@dimen/main_font_size"
             android:textColor="@color/main_text"
-            app:layout_constraintTop_toBottomOf="@id/reading_item_date"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/reading_item_date"
+            app:layout_constraintEnd_toEndOf="parent"
             tools:text="99.99 m3" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
