сделал добавление/редактирование показания, проверку на больше последнего

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -80,8 +80,8 @@
             android:name="locationId"
             app:argType="integer" />
         <argument
-            android:name="meterId"
-            app:argType="integer" />
+            android:name="meter"
+            app:argType="com.sosnowskydevelop.metermanager.data.Meter" />
         <action
             android:id="@+id/action_readingListFragment_to_meterDetailsFragment"
             app:destination="@id/meterDetailsFragment" />
@@ -102,9 +102,8 @@
             app:popUpTo="@id/readingListFragment"
             app:popUpToInclusive="true"/>
         <argument
-            android:name="meterId"
-            app:argType="integer"
-            android:defaultValue="-1" />
+            android:name="meter"
+            app:argType="com.sosnowskydevelop.metermanager.data.Meter" />
         <argument
             android:name="readingId"
             app:argType="integer"
