--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -108,6 +108,11 @@
             app:destination="@id/readingFragment"
             app:popUpTo="@id/readingFragment"
             app:popUpToInclusive="true"/>
+        <action
+            android:id="@+id/action_readingDetailsFragment_to_readingListFragment"
+            app:destination="@id/readingListFragment"
+            app:popUpTo="@id/readingListFragment"
+            app:popUpToInclusive="true"/>
     </fragment>
     <fragment
         android:id="@+id/readingFragment"
