--- a/app/src/main/res/layout/meter_list_item.xml
+++ b/app/src/main/res/layout/meter_list_item.xml
@@ -10,9 +10,9 @@
             android:id="@+id/meter_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/bg_white"
+            android:background="@color/bg_day"
             android:textSize="@dimen/main_font_size"
-            android:textColor="@color/main_text"
+            android:textColor="@color/main_text_day"
             android:paddingHorizontal="@dimen/medium_padding"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
