--- a/app/src/main/res/layout/reading_fragment.xml
+++ b/app/src/main/res/layout/reading_fragment.xml
@@ -11,7 +11,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintHorizontal_weight="1"
             android:textSize="@dimen/main_font_size"
-            android:textColor="@color/main_text"
+            android:textColor="@color/main_text_day"
             android:layout_margin="@dimen/details_margin"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintHorizontal_weight="1"
             android:textSize="@dimen/main_font_size"
-            android:textColor="@color/main_text"
+            android:textColor="@color/main_text_day"
             android:layout_margin="@dimen/details_margin"
             android:gravity="end"
             app:layout_constraintStart_toEndOf="@id/reading_date_label"
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintHorizontal_weight="1"
             android:textSize="@dimen/main_font_size"
-            android:textColor="@color/main_text"
+            android:textColor="@color/main_text_day"
             android:layout_margin="@dimen/details_margin"
             app:layout_constraintTop_toBottomOf="@id/reading_date_label"
             app:layout_constraintStart_toStartOf="parent"
@@ -50,7 +50,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintHorizontal_weight="1"
             android:textSize="@dimen/main_font_size"
-            android:textColor="@color/main_text"
+            android:textColor="@color/main_text_day"
             android:layout_margin="@dimen/details_margin"
             android:gravity="end"
             app:layout_constraintStart_toEndOf="@id/reading_value_label"
