--- a/app/src/main/res/layout/meter_list_fragment.xml
+++ b/app/src/main/res/layout/meter_list_fragment.xml
@@ -13,7 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/big_padding"
-            android:textColor="@color/secondary_text"
+            android:textColor="@color/gray"
             android:textSize="@dimen/description_font_size"
             android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@+id/meter_recyclerview"
