--- a/app/src/main/res/layout/reading_list_fragment.xml
+++ b/app/src/main/res/layout/reading_list_fragment.xml
@@ -19,7 +19,7 @@
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:textSize="@dimen/main_font_size"
-                android:textColor="@color/main_text"
+                android:textColor="@color/main_text_day"
                 android:text="@string/date"/>
             <TextView
                 android:layout_width="0dp"
@@ -27,7 +27,7 @@
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:textSize="@dimen/main_font_size"
-                android:textColor="@color/main_text"
+                android:textColor="@color/main_text_day"
                 android:text="@string/value"/>
         </LinearLayout>
         <androidx.recyclerview.widget.RecyclerView
