--- a/app/src/main/res/menu/meter_list_menu.xml
+++ b/app/src/main/res/menu/meter_list_menu.xml
@@ -11,7 +11,7 @@
         android:title="@string/edit_hint"
         app:showAsAction="always" />
     <item android:id="@+id/delete_location"
-        android:icon="@drawable/ic_action_delete"
+        android:icon="@drawable/delete_icon"
         android:title="@string/delete_hint"
         app:showAsAction="always" />
 </menu>
