--- a/app/src/main/res/menu/reading_list_menu.xml
+++ b/app/src/main/res/menu/reading_list_menu.xml
@@ -7,7 +7,7 @@
         app:showAsAction="always" />
     <item
         android:id="@+id/delete_meter"
-        android:icon="@drawable/ic_action_delete"
+        android:icon="@drawable/delete_icon"
         android:title="@string/delete_hint"
         app:showAsAction="always" />
 </menu>
