--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,10 +5,15 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="bg_white">#FFFFFFFF</color>
-    <color name="main_text">#FF000000</color>
-    <color name="secondary_text">#FF666666</color>
+    <color name="bg_day">#FFFFFFFF</color>
+    <color name="bg_night">#3E3E3E</color>
+
+    <color name="main_text_day">#FF000000</color>
+    <color name="main_text_night">#BDBDBD</color>
+
+    <color name="gray">#FF666666</color>
 </resources>
