--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,8 @@
     <fragment
         android:id="@+id/locationListFragment"
         android:name="com.sosnowskydevelop.metermanager.fragment.LocationListFragment"
-        android:label="LocationListFragment">
+        android:label="LocationListFragment"
+        tools:layout="@layout/location_list_fragment">
         <action
             android:id="@+id/action_locationListFragment_to_meterListFragment"
             app:destination="@id/meterListFragment" />
@@ -19,15 +20,17 @@
     <fragment
         android:id="@+id/locationDetailsFragment"
         android:name="com.sosnowskydevelop.metermanager.fragment.LocationDetailsFragment"
-        android:label="LocationDetailsDialog">
+        android:label="LocationDetailsDialog"
+        tools:layout="@layout/location_details_fragment">
         <action
             android:id="@+id/action_locationDetailsFragment_to_locationListFragment"
             app:destination="@id/locationListFragment"
             app:popUpTo="@id/locationListFragment"
             app:popUpToInclusive="true" />
         <argument
-            android:name="locationId"
-            app:argType="integer" />
+            android:name="location"
+            app:argType="com.sosnowskydevelop.metermanager.data.Location"
+            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/meterListFragment"
@@ -41,8 +44,9 @@
             android:id="@+id/action_meterListFragment_to_locationListFragment"
             app:destination="@id/locationListFragment" />
         <argument
-            android:name="locationId"
-            app:argType="integer" />
+            android:name="location"
+            app:argType="com.sosnowskydevelop.metermanager.data.Location"
+            app:nullable="true" />
         <action
             android:id="@+id/action_meterListFragment_to_locationDetailsFragment"
             app:destination="@id/locationDetailsFragment" />
@@ -53,18 +57,21 @@
     <fragment
         android:id="@+id/meterDetailsFragment"
         android:name="com.sosnowskydevelop.metermanager.fragment.MeterDetailsFragment"
-        android:label="MeterDetailsFragment">
+        android:label="MeterDetailsFragment"
+        tools:layout="@layout/meter_details_fragment">
         <action
             android:id="@+id/action_meterDetailsFragment_to_meterListFragment"
             app:destination="@id/meterListFragment"
             app:popUpTo="@id/meterListFragment"
             app:popUpToInclusive="true" />
         <argument
-            android:name="locationId"
-            app:argType="integer" />
+            android:name="location"
+            app:argType="com.sosnowskydevelop.metermanager.data.Location"
+            app:nullable="true" />
         <argument
-            android:name="meterId"
-            app:argType="integer" />
+            android:name="meter"
+            app:argType="com.sosnowskydevelop.metermanager.data.Meter"
+            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/readingListFragment"
@@ -77,11 +84,13 @@
             app:popUpTo="@id/meterListFragment"
             app:popUpToInclusive="true" />
         <argument
-            android:name="locationId"
-            app:argType="integer" />
+            android:name="location"
+            app:argType="com.sosnowskydevelop.metermanager.data.Location"
+            app:nullable="true" />
         <argument
             android:name="meter"
-            app:argType="com.sosnowskydevelop.metermanager.data.Meter" />
+            app:argType="com.sosnowskydevelop.metermanager.data.Meter"
+            app:nullable="true" />
         <action
             android:id="@+id/action_readingListFragment_to_meterDetailsFragment"
             app:destination="@id/meterDetailsFragment" />
@@ -95,14 +104,16 @@
     <fragment
         android:id="@+id/readingDetailsFragment"
         android:name="com.sosnowskydevelop.metermanager.fragment.ReadingDetailsFragment"
-        android:label="ReadingDetailsFragment" >
+        android:label="ReadingDetailsFragment"
+        tools:layout="@layout/reading_details_fragment">
         <argument
             android:name="meter"
-            app:argType="com.sosnowskydevelop.metermanager.data.Meter" />
+            app:argType="com.sosnowskydevelop.metermanager.data.Meter"
+            app:nullable="true" />
         <argument
-            android:name="readingId"
-            app:argType="integer"
-            android:defaultValue="-1" />
+            android:name="reading"
+            app:argType="com.sosnowskydevelop.metermanager.data.Reading"
+            app:nullable="true" />
         <action
             android:id="@+id/action_readingDetailsFragment_to_readingFragment"
             app:destination="@id/readingFragment"
@@ -113,22 +124,33 @@
             app:destination="@id/readingListFragment"
             app:popUpTo="@id/readingListFragment"
             app:popUpToInclusive="true"/>
+        <argument
+            android:name="location"
+            app:argType="com.sosnowskydevelop.metermanager.data.Location"
+            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/readingFragment"
         android:name="com.sosnowskydevelop.metermanager.fragment.ReadingFragment"
-        android:label="ReadingFragment" >
+        android:label="ReadingFragment"
+        tools:layout="@layout/reading_fragment">
         <argument
             android:name="meter"
-            app:argType="com.sosnowskydevelop.metermanager.data.Meter" />
+            app:argType="com.sosnowskydevelop.metermanager.data.Meter"
+            app:nullable="true" />
         <argument
-            android:name="readingId"
-            app:argType="integer" />
+            android:name="reading"
+             app:argType="com.sosnowskydevelop.metermanager.data.Reading"
+            app:nullable="true" />
         <action
             android:id="@+id/action_readingFragment_to_readingListFragment"
             app:destination="@id/readingListFragment" />
         <action
             android:id="@+id/action_readingFragment_to_readingDetailsFragment"
             app:destination="@id/readingDetailsFragment" />
+        <argument
+            android:name="location"
+            app:argType="com.sosnowskydevelop.metermanager.data.Location"
+            app:nullable="true" />
     </fragment>
 </navigation>
