--- a/app/src/main/res/menu/location_details_menu.xml
+++ b/app/src/main/res/menu/location_details_menu.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/location_menu_save"
-        android:icon="@drawable/save_icon"
-        app:showAsAction="always"
-        android:title="@string/save_new_location"/>
+    <item
+        android:id="@+id/location_menu_save"
+        android:icon="@drawable/save_icon_white"
+        android:title="@string/save_new_location"
+        app:showAsAction="always" />
 
 </menu>
