--- a/app/src/main/res/menu/location_list_menu.xml
+++ b/app/src/main/res/menu/location_list_menu.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/location_menu_logout"
         android:title="@string/logout"/>
-    <item android:id="@+id/location_menu_add"
-        android:icon="@drawable/add_icon"
-        app:showAsAction="always"
-        android:title="@string/add_new_location"/>
+    <item
+        android:id="@+id/location_menu_add"
+        android:icon="@drawable/add_icon_white"
+        android:title="@string/add_new_location"
+        app:showAsAction="always" />
 
 </menu>
