--- a/app/src/main/res/menu/meter_list_menu.xml
+++ b/app/src/main/res/menu/meter_list_menu.xml
@@ -3,15 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/add_meter"
-        android:icon="@drawable/add_icon"
+        android:icon="@drawable/add_icon_white"
         android:title="@string/add_meter_hint"
         app:showAsAction="always" />
-    <item android:id="@+id/edit_location"
-        android:icon="@drawable/edit_icon"
+    <item
+        android:id="@+id/edit_location"
+        android:icon="@drawable/edit_icon_white"
         android:title="@string/edit_hint"
         app:showAsAction="always" />
-    <item android:id="@+id/delete_location"
-        android:icon="@drawable/ic_action_delete"
+    <item
+        android:id="@+id/delete_location"
+        android:icon="@drawable/delete_icon_white"
         android:title="@string/delete_hint"
         app:showAsAction="always" />
 </menu>
