--- a/app/src/main/res/menu/reading_details_menu.xml
+++ b/app/src/main/res/menu/reading_details_menu.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/reading_menu_save"
-        android:icon="@drawable/save_icon"
-        app:showAsAction="always"
-        android:title="@string/save_new_reading"/>
+    <item
+        android:id="@+id/reading_menu_save"
+        android:icon="@drawable/save_icon_white"
+        android:title="@string/save_new_reading"
+        app:showAsAction="always" />
 </menu>
