--- a/app/src/main/res/menu/reading_list_menu.xml
+++ b/app/src/main/res/menu/reading_list_menu.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/edit_meter"
-        android:icon="@drawable/edit_icon"
+    <item
+        android:id="@+id/edit_meter"
+        android:icon="@drawable/edit_icon_white"
         android:title="@string/edit_hint"
         app:showAsAction="always" />
     <item
         android:id="@+id/delete_meter"
-        android:icon="@drawable/ic_action_delete"
+        android:icon="@drawable/delete_icon_white"
         android:title="@string/delete_hint"
         app:showAsAction="always" />
 </menu>
