--- a/app/src/main/res/menu/location_list_menu.xml
+++ b/app/src/main/res/menu/location_list_menu.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/location_menu_logout"
-        android:title="@string/logout"/>
+    <item android:id="@+id/location_menu_saving_data"
+        android:title="@string/saving_data"/>
     <item
         android:id="@+id/location_menu_add"
         android:icon="@drawable/add_icon_white"
